name:                filter-tokens
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/filter-tokens#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable filter-tokens
  hs-source-dirs:      .

  main-is:             Main.hs

  other-modules:       Args

  build-depends:       base
                     , aeson
                     , bytestring
                     , bytestring-trie
                     , conduit
                     , conduit-extra
                     , containers
                     , lens
                     , lens-aeson
                     , optparse-applicative
                     , resourcet
                     , text
                     , transformers
                     , unordered-containers
                     , utf8-string

  default-language:    Haskell2010

  ghc-options:         -Wall -O3 -threaded -rtsopts -with-rtsopts=-N
